main.tf
# Create a VPC
resource "aws_vpc" "main-vpc" {
  cidr_block = var.cidr
}

# Create subnet
resource "aws_subnet" "main-subnet" {
  cidr_block = "10.0.0.0/16"
  vpc_id = aws_vpc.main-vpc.id
}

# Create internet gateway
resource "aws_internet_gateway" "main-igw" {
  vpc_id = aws_vpc.main-vpc.id
}

# Create routing table
resource "aws_route_table" "main-route" {
  vpc_id = aws_vpc.main-vpc.id
 
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main-igw.id
  }
}

# associate subnet and routing
resource "aws_route_table_association" "main-subnet-assoc" {
  subnet_id      = aws_subnet.main-subnet.id
  route_table_id = aws_route_table.main-route.id
}
